all identtical to index (dont ask)

--- a/Index/index.html
+++ b/Index/index.html
@@ -88,6 +88,7 @@
 					<h3 class="slides">Almost Award Winning Maps <br />In a Competition</h3>
 				</div>
 			</div>
+			<!-- map begins here -->
 			<div class="nav-pics">
 				<table>
 					<tr>
@@ -109,7 +110,8 @@
 				</table>
 			</div>
 		</div>
-		<div class="comments"> <!-- customer comments -->
+		<!-- customer comments -->
+		<div class="comments">
 			<div class="all-comments">
 				<img src="../Resources\Images\if_Chat_bubble_2202260.png" alt="word bubble" />
 				<div>
