--- a/Index/services.html
+++ b/Index/services.html
@@ -4,13 +4,12 @@
 		<title>Joyce Surveying</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="..\Resources\CSS\index.css"> <!-- main css for wirefram-->
+		<link rel="stylesheet" type="text/css" href="..\Resources\CSS\services.css"> <!-- main css for wirefram-->
 	</head>
 	<body>
 		<header>
 			<div class="contact-top">
 				<div class="pull-left">
-
 					<button><a href="contact.html"><img src="../Resources\Images\if_User_Interface-10_2044278.png" alt="contact Icon" align="middle" />Contact us</button></a>
 					<ul id="contact-list">
 						<li>
@@ -79,40 +78,60 @@
 				</nav>
 			</div>
 		</header>
+		<!-- main photo begins here -->
 		<div class="main">
 			<div class="main-pic">
 				<img src="..\Resources\Images\pexels-photo-164338 (1).jpeg" alt="surveyor photo" />
+				<div id="slidWrapper">
+					<h3 class="slides">Results Driven with <br />Questionable Efficiency</h3>
+					<h3 class="slides">70% Overall Completion Rate</h3>
+					<h3 class="slides">Almost Award Winning Maps <br />In a Competition</h3>
+				</div>
 			</div>
+			<!-- map begins here -->
 			<div class="nav-pics">
 				<table>
 					<tr>
-						<th>
-							<h3>Services</h3>
-						</th>
+						<td>
+							<h5>Find us before we find you!!</h5>
+						</td>
 					</tr>
 					<tr>
 						<td>
-							<img src="..\Resources\Images\topography-202279_1920.jpg" id="services"/>
+							<div id="map">
+							</div>
 						</td>
+					</tr>
+					<tr>
 						<td>
-							<p>Joyce Surveying &amp Mapping delves into surveying both normal and exotic.
-							Our team of surveyors and engineers are trained in the most advanced techniques for
-						performing construction, topographical and volumetric maps in the deep. By the end of
-						2018, our first team of surveyors will have completed their certification for both glacial boundary
-						mapping and volcanic flood studies.</p>
+							<h5>Click Here for Directions<h5>
 						</td>
 					</tr>
 				</table>
 			</div>
 		</div>
-		<div class="comments"> <!-- customer comments -->
+		<!-- customer comments -->
+		<div class="comments">
 			<div class="all-comments">
 				<img src="../Resources\Images\if_Chat_bubble_2202260.png" alt="word bubble" />
 				<div>
 					<p class="commentSlides">
 						"Sean didn't even use any tools, he surveyed <br /> the
 						entire area using nothing but a ruler and<br /> paper clips.
-						I'd never seen anything like it.""<br />-<em>LarryPage<br />Ceo of alphabet</em>
+						I'd never seen anything like it.""<br />&emsp;-<em>LarryPage<br />&emsp;Ceo of alphabet</em>
+					</p>
+					<p class="commentSlides">
+						"Thanks to the topographical map <strong>Joyce Surveying &amp<br /> Mapping</strong>
+						made me, I can ride my bike downhill to <br />work and back."
+						<br />&emsp;-<em>Harley Davidson<br />&emsp;Avid Biker</em>
+					</p>
+					<p class="commentSlides">
+						"I just wanted him to take a survey, but he <br /> made
+						me a map. It was a good map though."<br />&emsp;-<em>Zander Lurie<br />&emsp;Ceo of Survey Monkey</em>
+					</p>
+					<p class="commentSlides">
+						"Joyce Surveying &amp Mapping is the second best <br /> map
+						maker I know."<br />&emsp;-<em>Christopher Columbus<br />&emsp;best map maker he knows</em>
 					</p>
 				</div>
 			</div>
@@ -149,7 +168,11 @@
 					</ul>
 				</div>
 		</footer>
+		<script async
+  		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ_ueH-TqLui-LVM_rAwk3xc_IbAYQJWg&callback=initMap">
+		</script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="..\Resources\JavaScript\services.js"></script>
+
 	</body>
 </html>
