--- a/Index/index.html
+++ b/Index/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<html manifest="..\Resources\appcache\index.appcache">
 		<title>Joyce Surveying</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8"/>
@@ -100,11 +101,6 @@
 						<td>
 							<div id="map">
 							</div>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h5>Click Here for Directions<h5>
 						</td>
 					</tr>
 				</table>
