--- a/Index/services.html
+++ b/Index/services.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<html manifest="..\Resources\appcache\services.appcache">
 		<title>Joyce Surveying</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8"/>
@@ -92,19 +93,20 @@
 			<div class="nav-pics">
 				<table>
 					<tr>
-						<td>
-							<h5>Find us before we find you!!</h5>
-						</td>
+						<th>
+							<h3>Services</h3>
+						</th>
 					</tr>
 					<tr>
 						<td>
-							<div id="map">
-							</div>
+							<img src="..\Resources\Images\topography-202279_1920.jpg" width=500px; id="services"/>
 						</td>
-					</tr>
-					<tr>
 						<td>
-							<h5>Click Here for Directions<h5>
+							<p>Joyce Surveying &amp Mapping delves into surveying both normal and exotic.
+							Our team of surveyors and engineers are trained in the most advanced techniques for
+						performing construction, topographical, volumetric and career maps in the deep sea. By the end of
+						2018, our first team of surveyors will have completed their certification for both glacial boundary
+						mapping and volcanic flood studies.</p>
 						</td>
 					</tr>
 				</table>
@@ -168,9 +170,6 @@
 					</ul>
 				</div>
 		</footer>
-		<script async
-  		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ_ueH-TqLui-LVM_rAwk3xc_IbAYQJWg&callback=initMap">
-		</script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="..\Resources\JavaScript\services.js"></script>
 
